# QuickAPI-py

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
benchmarks/: simple_benchmark.py
examples/: full_api.py  minimal_api.py  simple_chatbot.py  simple_demo.py  simple_rag.py  ui_counter.py
examples/templates/: advanced.html  demo.html
quickapi/: __init__.py  app.py  cli.py  docs.py  exceptions.py  openapi.py  request.py  response.py  router.py  utils.py  websocket.py
quickapi/ai/: __init__.py  chat_memory.py  embeddings.py  llm.py  rag.py
quickapi/ai/vectors/: __init__.py  base.py  memory.py
quickapi/middleware/: __init__.py  auth.py  base.py  cors.py
quickapi/templates/: __init__.py  core.py  hooks.py  layout.py  response.py  utils.py
quickapi/ui/: __init__.py  core.py
tests/: __init__.py  test_app.py  test_simplified.py
tests/benchmarks/: fastapi_comparison.py  test_feature.md  test_history.md
